# MeshMerger

./: .gitignore  README.md  pyproject.toml  requirements.txt
meshmerger/: __init__.py  app.py  cli.py  dfs2_to_mesh_converter.py  merge_engine.py
meshmerger/static/: api.js  app.js  config.js  index.html  interaction.js  mesh.js  plot.js  polygon.js  style.css  ui.js
